--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.16.3",
     "react-cropper": "^2.3.3",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
