--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "papaparse": "^5.4.1",
